--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -2,11 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
       <Button fx:id="Play" layoutX="24.0" layoutY="23.0" mnemonicParsing="false" onMouseClicked="#play" text="Play" />
       <ListView layoutX="24.0" layoutY="58.0" prefHeight="408.0" prefWidth="391.0" />
@@ -14,5 +16,10 @@
       <TextField layoutX="141.0" layoutY="23.0" prefHeight="27.0" prefWidth="272.0" />
       <TextField layoutX="441.0" layoutY="23.0" prefHeight="27.0" prefWidth="240.0" />
       <Button layoutX="83.0" layoutY="23.0" mnemonicParsing="false" text="Stop" />
+      <ProgressBar layoutX="21.0" layoutY="498.0" prefHeight="20.0" prefWidth="660.0" progress="0.0" />
+      <ScrollBar layoutX="24.0" layoutY="449.0" prefHeight="17.0" prefWidth="391.0" />
+      <ScrollBar layoutX="396.0" layoutY="56.0" orientation="VERTICAL" prefHeight="392.0" prefWidth="17.0" />
+      <ScrollBar layoutX="441.0" layoutY="449.0" prefHeight="17.0" prefWidth="240.0" />
+      <ScrollBar layoutX="664.0" layoutY="56.0" orientation="VERTICAL" prefHeight="392.0" prefWidth="17.0" />
    </children>
 </Pane>
