--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
@@ -10,7 +14,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
       <Button fx:id="Play" layoutX="24.0" layoutY="24.0" mnemonicParsing="false" onAction="#play" prefHeight="32.0" prefWidth="84.0" text="Play">
          <graphic>
@@ -29,20 +33,11 @@
       <ScrollBar layoutX="398.0" layoutY="109.0" orientation="VERTICAL" prefHeight="369.0" prefWidth="17.0" />
       <ScrollBar layoutX="441.0" layoutY="477.0" prefHeight="17.0" prefWidth="240.0" />
       <ScrollBar layoutX="664.0" layoutY="109.0" orientation="VERTICAL" prefHeight="368.0" prefWidth="17.0" />
-      <Button fx:id="Stop" layoutX="225.0" layoutY="24.0" mnemonicParsing="false" onAction="#Stop" prefHeight="32.0" prefWidth="74.0" text="Stop">
+      <Button fx:id="Stop" layoutX="123.0" layoutY="24.0" mnemonicParsing="false" onAction="#Stop" prefHeight="32.0" prefWidth="74.0" text="Stop">
          <graphic>
             <ImageView fitHeight="22.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/Stop.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
-      <Button fx:id="Pause" layoutX="123.0" layoutY="24.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="87.0" text="Pause">
-         <graphic>
-            <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/Pause.png" />
                </image>
             </ImageView>
          </graphic>
