--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -8,10 +8,10 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
       <Button fx:id="Play" layoutX="24.0" layoutY="23.0" mnemonicParsing="false" onAction="#play" text="Play" />
-      <ListView layoutX="24.0" layoutY="58.0" prefHeight="408.0" prefWidth="391.0" />
+      <ListView fx:id="view" layoutX="24.0" layoutY="58.0" prefHeight="408.0" prefWidth="391.0" />
       <TextArea layoutX="441.0" layoutY="58.0" prefHeight="408.0" prefWidth="240.0" />
       <TextField layoutX="141.0" layoutY="23.0" prefHeight="27.0" prefWidth="272.0" />
       <TextField layoutX="441.0" layoutY="23.0" prefHeight="27.0" prefWidth="240.0" />
