--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -20,12 +21,9 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <ListView fx:id="view" layoutX="24.0" layoutY="109.0" onMouseClicked="#handleMouseClick" prefHeight="385.0" prefWidth="391.0" />
       <TextField layoutX="24.0" layoutY="67.0" prefHeight="27.0" prefWidth="391.0" />
       <TextField layoutX="441.0" layoutY="67.0" prefHeight="27.0" prefWidth="240.0" />
       <ProgressBar fx:id="bar" layoutX="21.0" layoutY="510.0" prefHeight="20.0" prefWidth="660.0" progress="0.0" />
-      <ScrollBar layoutX="24.0" layoutY="477.0" prefHeight="17.0" prefWidth="391.0" />
-      <ScrollBar layoutX="398.0" layoutY="109.0" orientation="VERTICAL" prefHeight="369.0" prefWidth="17.0" />
       <ScrollBar layoutX="441.0" layoutY="477.0" prefHeight="17.0" prefWidth="240.0" />
       <ScrollBar layoutX="664.0" layoutY="110.0" orientation="VERTICAL" prefHeight="368.0" prefWidth="17.0" />
       <Button fx:id="Stop" layoutX="129.0" layoutY="24.0" mnemonicParsing="false" onAction="#stop" prefHeight="32.0" prefWidth="74.0" text="Stop">
@@ -46,5 +44,6 @@
             </ImageView>
          </graphic>
       </Button>
+      <TableView fx:id="tableViewLeft" layoutX="22.0" layoutY="109.0" prefHeight="387.0" prefWidth="393.0" />
    </children>
 </Pane>
