--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -12,7 +10,6 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
-      <ListView fx:id="view2" layoutX="441.0" layoutY="109.0" prefHeight="385.0" prefWidth="240.0" />
       <Button fx:id="Play" layoutX="24.0" layoutY="24.0" mnemonicParsing="false" onAction="#play" prefHeight="32.0" prefWidth="84.0" text="Play">
          <graphic>
             <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
@@ -24,8 +21,6 @@
       <TextField layoutX="24.0" layoutY="67.0" prefHeight="27.0" prefWidth="391.0" />
       <TextField layoutX="441.0" layoutY="67.0" prefHeight="27.0" prefWidth="240.0" />
       <ProgressBar fx:id="bar" layoutX="21.0" layoutY="510.0" prefHeight="20.0" prefWidth="660.0" progress="0.0" />
-      <ScrollBar layoutX="441.0" layoutY="477.0" prefHeight="17.0" prefWidth="240.0" />
-      <ScrollBar layoutX="664.0" layoutY="110.0" orientation="VERTICAL" prefHeight="368.0" prefWidth="17.0" />
       <Button fx:id="Stop" layoutX="129.0" layoutY="24.0" mnemonicParsing="false" onAction="#stop" prefHeight="32.0" prefWidth="74.0" text="Stop">
          <graphic>
             <ImageView fitHeight="22.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
@@ -45,5 +40,7 @@
          </graphic>
       </Button>
       <TableView fx:id="tableViewLeft" layoutX="22.0" layoutY="109.0" prefHeight="387.0" prefWidth="393.0" />
+      <TableView fx:id="tableViewRight" layoutX="441.0" layoutY="109.0" prefHeight="389.0" prefWidth="241.0" />
+      <Button fx:id="dnsBt" layoutX="441.0" layoutY="25.0" mnemonicParsing="false" onAction="#dns" prefHeight="31.0" prefWidth="49.0" text="DNS" />
    </children>
 </Pane>
