--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
       <ListView fx:id="view2" layoutX="441.0" layoutY="109.0" prefHeight="385.0" prefWidth="240.0" />
       <Button fx:id="Play" layoutX="24.0" layoutY="24.0" mnemonicParsing="false" onAction="#play" prefHeight="32.0" prefWidth="84.0" text="Play">
@@ -46,5 +46,6 @@
             </ImageView>
          </graphic>
       </Button>
+      <Button fx:id="credit" layoutX="441.0" layoutY="24.0" mnemonicParsing="false" onAction="#showCredit" prefHeight="32.0" prefWidth="74.0" text="Credit" />
    </children>
 </Pane>
