--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -25,8 +25,8 @@
          </graphic></Button>
       <TextField fx:id="text" layoutX="24.0" layoutY="67.0" onAction="#handleMouseClick" prefHeight="27.0" prefWidth="391.0" />
       <TextField fx:id="inputPort" layoutX="441.0" layoutY="67.0" prefHeight="27.0" prefWidth="240.0" />
-      <TextField fx:id="text" layoutX="24.0" layoutY="67.0" prefHeight="27.0" prefWidth="391.0" />
-      <TextField fx:id="inputPort" layoutX="441.0" layoutY="67.0" prefHeight="27.0" prefWidth="240.0" />
+      <TextField fx:id="text" layoutX="24.0" layoutY="67.0" prefHeight="27.0" prefWidth="391.0" promptText="Ex : 127.0.0.1" />
+      <TextField fx:id="inputPort" layoutX="441.0" layoutY="67.0" prefHeight="27.0" prefWidth="240.0" promptText="Ex : 1-2000" />
       <ProgressBar fx:id="bar" layoutX="21.0" layoutY="510.0" prefHeight="20.0" prefWidth="660.0" progress="0.0" />
       <Button fx:id="Stop" layoutX="129.0" layoutY="24.0" mnemonicParsing="false" onAction="#stop" prefHeight="32.0" prefWidth="74.0" text="Stop">
          <graphic>
